--- a/src/app/jk-list-item/jk-list-item.component.html
+++ b/src/app/jk-list-item/jk-list-item.component.html
@@ -1,1 +1,4 @@
-<p>jk-list-item works!</p>
+<div *ngIf="fruit">
+<span class="badge">id: {{fruit.id}}, name: {{fruit.name}} </span>
+<!-- <img src="../../assets/images/fruits.jpg"/> -->
+</div>
