--- a/src/app/jk-list-item/jk-list-item.component.html
+++ b/src/app/jk-list-item/jk-list-item.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="fruit">
-<span class="badge">id: {{fruit.id}}, name: {{fruit.name}} </span>
-<!-- <img src="../../assets/images/fruits.jpg"/> -->
-</div>
+<li>
+    name: {{fruit.name}}
+    <img src="../../assets/images/fruits.jpg"/>
+</li>
