--- a/src/app/jk-list/jk-list.component.html
+++ b/src/app/jk-list/jk-list.component.html
@@ -1,7 +1,3 @@
-<div *ngIf="selectedFruit">
 <ul class="fruits">
-    <li *ngFor="let fruit of fruits">
-        <app-jk-list-item [fruit]="selectedFruit"></app-jk-list-item>
-    </li>
+        <app-jk-list-item *ngFor="let fruit of fruits" [fruit]="fruit"></app-jk-list-item>
 </ul>
-</div>
