--- a/src/app/jk-list-item/jk-list-item.component.html
+++ b/src/app/jk-list-item/jk-list-item.component.html
@@ -1,4 +1,5 @@
 <li>
-    name: {{fruit.name}}
-    <img src="../../assets/images/fruits.jpg"/>
-</li>
+    name: {{ fruit.name }} id: {{ index + 1 }}
+    <img src="../../assets/images/{{ fruit.name }}.jpg" />
+  </li>
+  
