--- a/src/app/jk-list-item/jk-list-item.component.css
+++ b/src/app/jk-list-item/jk-list-item.component.css
@@ -1,3 +1,9 @@
+li {
+    line-height: 50px;    
+    align-items: center;
+    width: min-content;
+}
+
 img {
     width: 220px;
     height: 170px;
