--- a/src/app/jk-list/jk-list.component.css
+++ b/src/app/jk-list/jk-list.component.css
@@ -1,10 +1,135 @@
-ul {
+#filters {
+    justify-content: space-between;
+    display: flex;
+    max-width: 75%;
+    padding: 20px 0;
+  }
+
+  #noItems {
+    display: flex;
+    justify-content: center;
+    background: #c3002f38;
+    box-shadow: 2px 2px 15px 2px #00000038;
+  }
+
+  #noItems p {
+    font-size: 26px;
+    word-break: break-word;
+    padding: 0 15px;
+  }
+
+  #noItems strong {
+    background: #904ae624;
+  }
+
+  ul {
     column-count: 5;
     list-style: none;
-}
+    padding-left: 0;
+  }
 
-li {
-    line-height: 50px;    
-    align-items: center;
-    width: min-content;
-}
+  button {
+    border: 2px solid;
+    padding: 0 30px;
+    height: 45px;
+    background: transparent;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+
+  button:focus {
+    outline: none;
+  }
+
+  .purpleButton {
+    border-color: #904ae6;
+    color: #904ae6;
+  }
+
+  .blueButton {
+    border-color: #35b8ee;
+    color: #35b8ee;
+  }
+
+  .redButton {
+    border-color: #c3002f;
+    color: #c3002f;
+  }
+
+  .purpleButton:hover {
+    background: #904ae6;
+    color: #fff;
+    border-color: #904ae6;
+  }
+
+  .blueButton:hover {
+    background: #35b8ee;
+    color: #fff;
+    border-color: #35b8ee;
+  }
+
+  .redButton:hover {
+    background: #c3002f;
+    color: #fff;
+    border-color: #c3002f;
+  }
+
+  .purpleButton:focus {
+    background: #904ae6;
+    color: #fff;
+  }
+
+  .blueButton:focus {
+    background: #35b8ee;
+    color: #fff;
+  }
+
+  .greenInput {
+    border: 2px solid #3fb984;
+    padding-left: 10px;
+  }
+
+  @media screen and (max-width: 1150px) {
+    #filters {
+      max-width: 100%;
+    }
+
+    #filters button, #filters input {
+      margin-right: 5px;
+    }
+
+    .list {
+      column-count: 3;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    #filters {
+      display: block;
+      max-width: 100%;
+    }
+
+    #filters button, #filters input {
+      margin: 10px 0;
+      width: 100%;
+    }
+
+    #filters input {
+      height: 45px;
+      width: -webkit-fill-available;
+    }
+
+    .list {
+      column-count: 2;
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    .list {
+      column-count: 1;
+    }
+  }
