--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,8 @@
-/******* STYLES *********/
-* {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-}
-
-.container {
-    display: flex;
-    justify-content: center;
-    flex: 1;
+  .container {
+    display: block;
     padding: 0 20px;
-}
+  }
+
+  h1 {
+    text-align: center;
+  }
