--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: url(src/assets/images/main-background.jpg);
+    background-size: contain;
+  }
+
+  * {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+  }
