--- a/src/app/jk-list-item/jk-list-item.component.html
+++ b/src/app/jk-list-item/jk-list-item.component.html
@@ -1,5 +1,5 @@
 <li>
-    name: {{ fruit.name }} id: {{ index + 1 }}
+    name: {{ fruit.name }}, id: {{ index + 1 }}
     <img src="../../assets/images/{{ fruit.name }}.jpg" />
   </li>
   
